--- a/app/views/flavors/show.html.erb
+++ b/app/views/flavors/show.html.erb
@@ -1,16 +1,11 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @flavor %>
+
 
 <div>
+<%= render @flavor %>
 
-<h1><%= @flavor.name %></h1>
-
-<p>Inventory Level: <%= @flavor.inventory %></p>
-
-
-  <%= link_to "Edit this flavor", edit_flavor_path(@flavor) %> |
-  <%= link_to "Back to flavors", flavors_path %>
-
-  <%= button_to "Destroy this flavor", @flavor, method: :delete %>
+<%= link_to "Edit this flavor", edit_flavor_path(@flavor) %> |
+<%= link_to "Back to flavors", flavors_path %> |
+  <%= link_to "Destroy this flavor", @flavor, method: :delete %> 
 </div>
