--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex flex-col">
+      <nav class="block">
+        <%= link_to "Dashboard", dashboard_path %>
+        <%= link_to "Users", users_path %>
+        <%= link_to "Logout", sessions_path, data: { turbo_method: :delete } %>
+      </nav>
+
       <% if flash[:notice].present? %>
         <div class="notice">
           <%= flash[:notice] %>
