--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -17,10 +17,15 @@
                 <% end %>
               </tr>
             </thead>
-            <tbody class="divide-y divide-gray-200 bg-white">
+            <tbody data-controller="sortable" class="divide-y divide-gray-200 bg-white" id="items">
               <% @flavors.each do |flavor| %>
                 <tr>
-                  <td><%= flavor.name %></td>
+                  <td>
+                    <div class="flex">
+                      <i class="fas fa-arrows-alt handle mt-1 ml-1 mr-1"></i>
+                      <%= flavor.name %>
+                    </div>
+                  </td>
                   <% @locations.each do |location| %>
                     <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 <%= flavor.alerting_inventory?(location) ? 'bg-red-500' : '' %>">
                       <%= flavor.location_inventory(location) %>
