--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,6 +34,7 @@
                 <% end %>
               </div>
             </div>
+            <%= link_to "Locations", locations_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
             <%= link_to "System Configuration", system_configuration_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"  if current_user.has_role?(:super_admin) %>
             <%= link_to "Logout", sessions_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium", data: { turbo_method: :delete } %>
           </div>
