Production feature:  Production model to track how much ice-cream was made each day

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div>
+    <%= form.label :inventory, style: "display: block" %>
+    <%= form.check_box :inventory %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
