--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -3,4 +3,9 @@
     <strong>Name:</strong>
     <%= location.name %>
   </p>
+
+  <p>
+    <strong>Inventory:</strong>
+    <%= location.inventory ? 'Yes' : 'No' %>
+  </p>
 </div>
