--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,8 +29,22 @@
               </div>
 
               <div data-nav-bar-target="salesLocationsList" class="absolute hidden z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="sales-menu-button" tabindex="-1">
-                <% Location.all.each_with_index do |location, index| %>
+                <% Location.stores.each_with_index do |location, index| %>
                   <%= link_to location.name, new_sale_path(location_id: location.id), class: "block px-4 py-2 text-sm text-gray-700", role: "menuitem", tabindex: "-1", id: "sales-menu-item-#{index}" %>
+                <% end %>
+              </div>
+            </div>
+
+            <div class="relative ml-3">
+              <div data-action="click->nav-bar#toggleProdLocationDropdown">
+                <button type="button" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" id="productions-menu-button" aria-expanded="false" aria-haspopup="true">
+                  Productions
+                </button>
+              </div>
+
+              <div data-nav-bar-target="productionsLocationsList" class="absolute hidden z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="productions-menu-button" tabindex="-1">
+                <% Location.inventories.each_with_index do |location, index| %>
+                  <%= link_to location.name, new_production_path(location_id: location.id), class: "block px-4 py-2 text-sm text-gray-700", role: "menuitem", tabindex: "-1", id: "productions-menu-item-#{index}" %>
                 <% end %>
               </div>
             </div>
