--- a/app/views/system_configurations/_form.html.erb
+++ b/app/views/system_configurations/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :alerting_quantity, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2" %>
   </div>
 
+  <div class="my-5">
+    <%= form.label :report_recipients %>
+    <%= form.text_field :report_recipients, multiple: true, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2" %>
+  </div>
+
   <div class="inline">
     <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
