--- a/app/views/system_configurations/show.html.erb
+++ b/app/views/system_configurations/show.html.erb
@@ -13,10 +13,20 @@
               <tr>
                 <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Alerting Quantity</th>
               </tr>
+              <tr>
+                <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Report Recipients</th>
+              </tr>
             </thead>
             <tbody class="divide-y divide-gray-200 bg-white">
               <tr>
                 <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= @system_configuration.alerting_quantity %></td>
+              </tr>
+              <tr>
+                <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
+                  <% @system_configuration.report_recipients.each do |recipient| %>
+                    <%= recipient %><br>
+                  <% end %>
+                </td>
               </tr>
             </tbody>
           </table>
