--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -17,7 +17,7 @@
     <h3 class="text-xl">Quantity</h3>
   </div>
   <%= form_with(url: sales_path, method: :post, class: "contents") do |form| %>
-    <% @flavors.each do |flavor| %>
+    <% @flavors.order_by_name.each do |flavor| %>
       <div class="col-span-2 py-3 text-base border-b border-gray-200">
         <%= form.label :flavor, flavor.name %>
       </div>
