--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -5,7 +5,7 @@
   </p>
 
   <p>
-    <strong>Inventory:</strong>
-    <%= location.inventory ? 'Yes' : 'No' %>
+    <strong>Type:</strong>
+    <%= location.type %>
   </p>
 </div>
