--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New location</h1>
 
-<%= render "form", location: @location %>
+<%= render "form", location: @location, url: locations_path, method: :post %>
 
 <br>
 
