--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @location %>
+<%= render 'location', location: @location %>
 
 <div>
   <%= link_to "Edit this location", edit_location_path(@location) %> |
   <%= link_to "Back to locations", locations_path %>
 
-  <%= button_to "Destroy this location", @location, method: :delete %>
+  <%= button_to "Destroy this location", location_path(@location), method: :delete %>
 </div>
