Finalizing the basic styling

--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,11 +1,9 @@
-<div id="<%= dom_id location %>">
-  <p>
-    <strong>Name:</strong>
-    <%= location.name %>
-  </p>
-
-  <p>
-    <strong>Type:</strong>
-    <%= location.type %>
-  </p>
-</div>
+<tr id="<%= dom_id location %>">
+  <td class="w-full"> <%= location.name %> </td>
+  <td class="w-full"> <%= location.type %> </td>
+  <td class="whitespace-nowrap flex py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
+    <%= link_to "Show this location", location_path(location), class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Edit this location', edit_location_path(location), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= button_to "Destroy this location", location_path(location), method: :delete, class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+  </td>
+</tr>
