--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,10 +1,8 @@
-<h1>Editing location</h1>
+<div class="mx-auto md:w-2/3 w-full">
+  <h1>Editing location</h1>
 
-<%= render "form", location: @location, url: location_path(@location), method: :patch %>
+  <%= render "form", location: @location, url: location_path(@location), method: :patch %>
 
-<br>
-
-<div>
-  <%= link_to "Show this location", location_path(@location) %> |
-  <%= link_to "Back to locations", locations_path %>
+  <%= link_to "Show this location", location_path(@location), class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Back to locations", locations_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
