--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,10 +1,13 @@
-<p style="color: green"><%= notice %></p>
+<div class="mx-auto md:w-2/3 w-full flex">
+  <div class="mx-auto min-w-full">
+    <div class="container mx-auto px-4 py-8">
+      <h1 class="text-2xl font-bold mb-4">Location Details</h1>
+      <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <p><strong>Name:</strong> <span class="ml-80"><%= @location.name %></span></p>
+        <p><strong>Type:</strong> <span class="ml-80"><%= @location.type %></span></p>
+      </div>
+    </div>
 
-<%= render 'location', location: @location %>
-
-<div>
-  <%= link_to "Edit this location", edit_location_path(@location) %> |
-  <%= link_to "Back to locations", locations_path %>
-
-  <%= button_to "Destroy this location", location_path(@location), method: :delete %>
+    <%= link_to 'Back to locations', locations_path, class: "ml-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+  </div>
 </div>
