--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,9 @@
 <div class="mx-auto md:w-2/3 w-full flex">
   <div class="mx-auto">
-    <% if notice.present? %>
-      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-    <% end %>
-
     <div class="container mx-auto px-4 py-8">
       <h1 class="text-2xl font-bold mb-4">User Details</h1>
       <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-        <p><strong>Email:</strong> <%= @user.email %></p>
+        <p><strong>Email:</strong><span class="ml-80"><%= @user.email %></span></p>
       </div>
     </div>
 
