Fixing bug related to nav items

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,11 +32,10 @@
                 class: "nav-link group-[.active-link]:bg-gray-900 text-gray-300 group-[.active-link]:text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
             </div>
 
-            <div class="relative -mt-1.5 ml-3">
+            <div class="relative ml-3">
               <div class="group" data-action="click->nav-bar#toggleLocationDropdown click->nav-bar#activeLink">
-                <button type="button" class="nav-link group-[.active-link]:bg-gray-900 text-gray-300 group-[.active-link]:text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" id="sales-menu-button" aria-expanded="false" aria-haspopup="true">
-                  Sales
-                </button>
+                <%= link_to "Sales", "javascript:void(0)", id: "sales-menu-button", "aria-expanded": "false", "aria-haspopup": "true",
+                    class: "nav-link group-[.active-link]:bg-gray-900 text-gray-300 group-[.active-link]:text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
               </div>
 
               <div data-nav-bar-target="salesLocationsList" class="absolute hidden z-10 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="sales-menu-button" tabindex="-1">
@@ -46,11 +45,10 @@
               </div>
             </div>
 
-            <div class="relative -mt-1.5 ml-3">
+            <div class="relative ml-3">
               <div class="group" data-action="click->nav-bar#toggleProdLocationDropdown click->nav-bar#activeLink">
-                <button type="button" class="nav-link group-[.active-link]:bg-gray-900 text-gray-300 group-[.active-link]:text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" id="productions-menu-button" aria-expanded="false" aria-haspopup="true">
-                  Productions
-                </button>
+                <%= link_to "Productions", "javascript:void(0)", id: "productions-menu-button", "aria-expanded": "false", "aria-haspopup": "true",
+                    class: "nav-link group-[.active-link]:bg-gray-900 text-gray-300 group-[.active-link]:text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
               </div>
 
               <div data-nav-bar-target="productionsLocationsList" class="absolute hidden z-10 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="productions-menu-button" tabindex="-1">
