Added some fixes for the white background bug

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,7 +1,7 @@
 <div class="px-4 sm:px-6 lg:px-8">
   <div class="sm:flex sm:items-center">
     <div class="sm:flex-auto flex justify-between items-center">
-      <h1 class="text-base font-semibold leading-6 text-gray-900">Users List</h1>
+      <h1 class="text-xl text-base font-semibold leading-6 text-gray-900">Users List</h1>
       <%= link_to 'New location', new_location_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
     </div>
   </div>
