--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,11 +38,17 @@
                     class: "nav-link group-[.active-link]:bg-gray-900 text-gray-300 group-[.active-link]:text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
               </div>
 
-              <div data-nav-bar-target="salesLocationsList" class="absolute hidden z-10 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="sales-menu-button" tabindex="-1">
-                <% Store.all.each_with_index do |location, index| %>
-                  <%= link_to location.name, sales_path(location_id: location.id), class: "block px-4 py-2 text-sm text-gray-700", role: "menuitem", tabindex: "-1", id: "sales-menu-item-#{index}" %>
-                <% end %>
-              </div>
+              <% if @stores.size > 0 %>
+                <div data-nav-bar-target="salesLocationsList" class="mt-2 absolute hidden z-10 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="sales-menu-button" tabindex="-1">
+                  <% @stores.each_with_index do |location, index| %>
+                    <%= link_to location.name, sales_path(location_id: location.id), class: "block px-4 py-2 text-sm text-gray-700", role: "menuitem", tabindex: "-1", id: "sales-menu-item-#{index}" %>
+                  <% end %>
+                </div>
+              <% else %>
+                <div data-nav-bar-target="salesLocationsList" class="mt-2 absolute hidden z-10 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="sales-menu-button" tabindex="-1">
+                  <%= link_to "Stores does not exists", "javascript:void(0)", class: "block px-4 py-2 text-sm text-gray-700", role: "menuitem", tabindex: "-1", id: "sales-menu-item-#{0}" %>
+                </div>
+              <% end %>
             </div>
 
             <div class="relative ml-3">
@@ -51,11 +57,17 @@
                     class: "nav-link group-[.active-link]:bg-gray-900 text-gray-300 group-[.active-link]:text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
               </div>
 
-              <div data-nav-bar-target="productionsLocationsList" class="absolute hidden z-10 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="productions-menu-button" tabindex="-1">
-                <% Inventory.all.each_with_index do |location, index| %>
-                  <%= link_to location.name, productions_path(location_id: location.id), class: "block px-4 py-2 text-sm text-gray-700", role: "menuitem", tabindex: "-1", id: "productions-menu-item-#{index}" %>
-                <% end %>
-              </div>
+              <% if @inventories.size > 0 %>
+                <div data-nav-bar-target="productionsLocationsList" class="mt-2 absolute hidden z-10 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="sales-menu-button" tabindex="-1">
+                  <% @inventories.each_with_index do |location, index| %>
+                    <%= link_to location.name, productions_path(location_id: location.id), class: "block px-4 py-2 text-sm text-gray-700", role: "menuitem", tabindex: "-1", id: "sales-menu-item-#{index}" %>
+                  <% end %>
+                </div>
+              <% else %>
+                <div data-nav-bar-target="productionsLocationsList" class="mt-2 absolute hidden z-10 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="sales-menu-button" tabindex="-1">
+                  <%= link_to "Inventories does not exists", "javascript:void(0)", class: "block px-4 py-2 text-sm text-gray-700", role: "menuitem", tabindex: "-1", id: "productions-menu-item-#{0}" %>
+                </div>
+              <% end %>
             </div>
 
             <div class="group">
