--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1>Editing location</h1>
+  <h1 class="text-xl">Editing location</h1>
 
   <%= render "form", location: @location, url: location_path(@location), method: :patch %>
 
