--- a/app/views/system_configurations/_form.html.erb
+++ b/app/views/system_configurations/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1>Editing system configuration</h1>
+  <h1 class="text-xl">Editing system configuration</h1>
 
   <%= form_with(model: system_configuration, url: system_configuration_path, method: :patch, class: "contents") do |form| %>
     <% if system_configuration.errors.any? %>
