--- a/app/views/system_configurations/show.html.erb
+++ b/app/views/system_configurations/show.html.erb
@@ -1,7 +1,7 @@
 <div class="px-4 sm:px-6 lg:px-8">
   <div class="sm:flex sm:items-center">
     <div class="sm:flex-auto">
-      <h1 class="text-base font-semibold leading-6 text-gray-900">System configurations</h1>
+      <h1 class="text-base text-xl font-semibold leading-6 text-gray-900">System configurations</h1>
     </div>
   </div>
   <div class="mt-8 flow-root">
