make type required for locations and added some check for the nav items activation

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :name, required: true, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
     <%= form.label :type %>
-    <%= form.select :type, Location.types.keys, { include_blank: 'Select type' },
+    <%= form.select :type, Location.types.keys, { include_blank: 'Select type', required: true },
         class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
 </div>
 
