--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,9 +1,13 @@
 <div class="px-4 sm:px-6 lg:px-8">
-  <div class="sm:flex sm:items-center">
+
+  <%= line_chart @sales_locations_data, xtitle: 'Week Number', ytitle: 'Total Quantity', library: { series: { lineWidth: 3 } } %>
+
+  <div class="mt-4 sm:flex sm:items-center">
     <div class="sm:flex-auto">
       <h1 class="text-xl text-base font-semibold leading-6 text-gray-900">Inventory by location</h1>
     </div>
   </div>
+
   <div class="mt-8 flow-root">
     <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
       <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
